@@ -411,8 +411,8 @@ The <ulink url="http://audio.search.yahoo.com">Yahoo! Audio Search</ulink> may b
 <title>Amazon.com</title>
 
 <para>
-Using the Amazon Web Services, &appname; can search any of six different international sites operated by <ulink url="http://amazon.com">Amazon.com</ulink> for information: United States, United Kingdom, Germany, Japan,
-France, and Canada.
+Using the Amazon Web Services, &appname; can search any of nine different international sites operated by <ulink url="http://amazon.com">Amazon.com</ulink> for information: United States, United Kingdom, Germany, Japan,
+France, Canada, China, Spain, and Italy.
 </para>
 
 <screenshot>
