@@ -90,7 +90,7 @@ void AmazonFetcherTest::initTestCase() {
 //  pacteDesLoups.insert(QLatin1String("format"), QLatin1String("PAL"));
 
   QHash<QString, QString> petitPrinceCN;
-  petitPrinceCN.insert(QLatin1String("title"), QString::fromUtf8("小王子"));
+  petitPrinceCN.insert(QLatin1String("title"), QString::fromUtf8("小王子(65周年纪念版)"));
   petitPrinceCN.insert(QLatin1String("author"), QString::fromUtf8("圣埃克絮佩里 (Saint-Exupery)"));
 
   m_fieldValues.insert(QLatin1String("practicalRdf"), practicalRdf);
@@ -134,10 +134,14 @@ void AmazonFetcherTest::testTitle() {
       QEXPECT_FAIL("CA video title", "CA video titles show music results for some reason", Continue);
     }
     QString result = entry->field(i.key()).toLower();
-    // CA and FR titles have edition info in the title
+    // several titles have edition info in the title
     if(collType == Tellico::Data::Collection::Video &&
+       i.key() == QLatin1String("title") &&
        (locale == QLatin1String("CA") ||
         locale == QLatin1String("FR") ||
+        locale == QLatin1String("ES") ||
+        locale == QLatin1String("CN") ||
+        locale == QLatin1String("IT") ||
         locale == QLatin1String("DE"))) {
       QVERIFY2(result.contains(i.value(), Qt::CaseInsensitive), i.key().toAscii());
     } else {
@@ -168,12 +172,11 @@ void AmazonFetcherTest::testTitle_data() {
                                  << static_cast<int>(Tellico::Data::Collection::Book)
                                  << QString::fromLatin1("Practical RDF")
                                  << QString::fromLatin1("practicalRdf");
-/*
   QTest::newRow("CN book title") << QString::fromLatin1("CN")
                                   << static_cast<int>(Tellico::Data::Collection::Book)
-                                  << QString::fromLatin1("小王子")
+                                  << QString::fromUtf8("小王子(65周年纪念版)")
                                   << QString::fromLatin1("petitPrinceCN");
-*/
+
   // a known bug is CA video titles result in music results, so only title matches
 //  QTest::newRow("CA video title") << QString::fromLatin1("CA")
 //                                  << static_cast<int>(Tellico::Data::Collection::Video)
@@ -183,7 +186,6 @@ void AmazonFetcherTest::testTitle_data() {
                                   << static_cast<int>(Tellico::Data::Collection::Video)
                                   << QString::fromLatin1("Le Pacte des Loups")
                                   << QString::fromLatin1("pacteDesLoups");
-/*
   QTest::newRow("ES video title") << QString::fromLatin1("ES")
                                   << static_cast<int>(Tellico::Data::Collection::Video)
                                   << QString::fromLatin1("Le Pacte des Loups")
@@ -192,7 +194,7 @@ void AmazonFetcherTest::testTitle_data() {
                                   << static_cast<int>(Tellico::Data::Collection::Video)
                                   << QString::fromLatin1("Le Pacte des Loups")
                                   << QString::fromLatin1("pacteDesLoups");
-*/
+
 }
 
 void AmazonFetcherTest::testIsbn() {
