@@ -1,3 +1,7 @@
+2011-09-27  Robby Stephenson  <robby@periapsis.org>
+
+	* Added Amazon data sources for China, Spain, and Italy.
+
 2011-09-24  Robby Stephenson  <robby@periapsis.org>
 
 	* Released Tellico 2.3.4.
